tests/baselines/reference/decoratorOnAwait.errors.txt
decoratorOnAwait.ts(3,5): error TS1146: Declaration expected.


==== decoratorOnAwait.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
        
!!! error TS1146: Declaration expected.
    await 1
    